# Oscilloscope-music-generator

./: README.md
source/: CMakeLists.txt  main.cc
source/include/: genericBuffer.h  point.h  sceneSettings.h  simpleGenerator.h  svf.h  text.h
source/src/: AudioFile.cc  point.cc  sceneSettings.cc  simpleGenerator.cc  svf.cc  text.cc
